--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
     "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.2",
     "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.5.2",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "openai": "^4.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
